src/test/ui/traits/traits-inductive-overflow-supertrait.stderr
error[E0275]: overflow evaluating the requirement `NoClone: Magic`
  --> $DIR/traits-inductive-overflow-supertrait.rs:13:18
   |
LL | fn copy<T: Magic>(x: T) -> (T, T) { (x, x) }
   |            ----- required by this bound in `copy`
...
LL |     let (a, b) = copy(NoClone);
   |                  ^^^^
   |
   = note: required because of the requirements on the impl of `Magic` for `NoClone`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0275`.
